# my_MineContext

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGES_SUMMARY.md  CLAUDE.md  COMPRESSION_TASK_REFACTOR_PLAN.md  CONTRIBUTING.md  Caddyfile  DASHVECTOR_MIGRATION_PLAN.md  Dockerfile  MERGER_INIT_REFACTOR_PLAN.md  Makefile  README.md  REDIS_CACHE_CHANGES.md  STATELESS_REFACTOR_PLAN.md  TASK_SCHEDULER_REFACTOR_PLAN.md  build.bat  build.sh  check_memory.py  docker-compose.yml  generate_fake_data.py  hook-opencontext.py  nginx.conf  opencontext.spec  opencontext_issues_analysis.md  package-lock.json  package.json  pyproject.toml  script.py  test_get_contexts.py  test_push_multimodal.py  vikingDB.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_docs_advice.yml  config.yml
.github/workflows/: release.yml
OpenViking/.github/workflows/: rust-cli.yml
OpenViking/examples/: ov.conf.example
OpenViking/examples/memex/: README.md  cli.py  client.py  config.py  feishu.py  ov.conf.example  pyproject.toml
OpenViking/examples/memex/commands/: browse.py  knowledge.py  query.py  search.py  stats.py
OpenViking/examples/memex/rag/: recipe.py
OpenViking/tests/: test_edge_cases.py  test_edge_cases_simple.py
VikingDB/: id检索-SearchById.md  vikingDB.md  关键词检索-SearchByKeywords.md  创建数据集-CreateVikingdbCollection.md  创建索引-CreateVikingdbIndex.md  删除数据集-DeleteVikingdbCollection.md  删除索引-DeleteVikingdbIndex.md  向量检索-SearchByVector.md  在数据集中点查-FetchDataInCollection.md  在索引中点查-FetchDataInIndex.md  数据写入-UpsertData.md  数据删除-DeleteData.md  数据更新-UpdateData.md  查看数据集列表-ListVikingdbCollection.md  查看数据集详情-GetVikingdbCollection.md  查看索引列表-ListVikingdbIndex.md  查看索引详情-GetVikingdbIndex.md  标量排序检索-SearchByScalar.md  检索公共参数.md  随机检索-SearchByRandom.md
VikingDBv2Docs/: README.md  多模态向量化.md
VikingDBv2Docs/03-错误码/: 错误码与问题排查.md
config/: MODULE.md  config-docker.yaml  config-minimal-test.yaml  config-scheduler.yaml  config.yaml  config_dashvector.yaml  config_mysql.yaml  config_mysql_example.yaml  prompts_en.yaml  prompts_zh.yaml  quick_start_default.md  tasks.yaml
docs/: api_reference.md  code-review-report.md  console_api_guide.md  curls.sh  search_response_example.json
docs/plans/: 2026-03-04-search-events-design.md  2026-03-05-settings-apply-design.md  2026-03-08-object-storage-media-design.md  2026-03-08-search-multimodal-design.md  2026-03-08-search-multimodal-plan.md  2026-03-08-search-web-multimodal-plan.md  2026-03-08-vikingdb-v2-multimodal-design.md  2026-03-09-contexts-multimodal-design.md  2026-03-09-contexts-multimodal-plan.md  2026-03-09-performance-scalability-audit.md  2026-03-09-scheduler-runtime-disable.md  2026-03-09-search-media-upload-plan.md  2026-03-10-fix-completion-cache-async.md  2026-03-10-remove-user-setting-file-layer.md  2026-03-10-settings-mysql-migration.md  2026-03-10-settings-save-fix.md
examples/: .gitignore  example_document_processor.py  example_screenshot_processor.py  example_screenshot_to_insights.py  example_todo_deduplication.py  example_weblink_processor.py  regenerate_debug_file.py
opencontext/: __init__.py  cli.py
opencontext/config/: MODULE.md  __init__.py  config_manager.py  global_config.py  prompt_manager.py
opencontext/context_capture/: MODULE.md  __init__.py  base.py  folder_monitor.py  screenshot.py  text_chat.py  text_chat_capture.py  vault_document_monitor.py  web_link_capture.py
opencontext/context_consumption/: __init__.py
opencontext/context_processing/: MODULE.md  __init__.py
opencontext/interfaces/: __init__.py  capture_interface.py  processor_interface.py  storage_interface.py
opencontext/llm/: MODULE.md  __init__.py  global_embedding_client.py  global_vlm_client.py  llm_client.py
opencontext/managers/: __init__.py  capture_manager.py  consumption_manager.py  event_manager.py  processor_manager.py
opencontext/models/: MODULE.md  __init__.py  context.py  enums.py
opencontext/monitoring/: __init__.py  metrics_collector.py  monitor.py
opencontext/periodic_task/: MODULE.md  __init__.py  agent_profile_update.py  base.py  data_cleanup.py  hierarchy_summary.py  memory_compression.py  registry.py
opencontext/scheduler/: MODULE.md  __init__.py  base.py  redis_scheduler.py  user_key_builder.py
opencontext/server/: MODULE.md  __init__.py  api.py  component_initializer.py  config_reload_manager.py  context_operations.py  opencontext.py  stream_interrupt.py  utils.py
opencontext/storage/: MODULE.md  __init__.py  base_storage.py  global_storage.py  redis_cache.py  unified_storage.py
opencontext/tools/: MODULE.md  base.py  tool_definitions.py  tools_executor.py
opencontext/utils/: __init__.py  async_utils.py  dict_utils.py  file_utils.py  image.py  json_encoder.py  json_parser.py  logger.py  logging_utils.py  media_refs.py  time_utils.py
opencontext/web/: __init__.py
scripts/: build_narrative_skill_zip.py  cleanup_stale_trigger_mode.py  pre-push  run_memory_cleanup.py  scheduler_runner.py  stress_test.py  test_ark_embedding.py  test_s3_upload.py  test_vikingdb_v2.py
scripts/devtools/: routes.py
src/: architecture-overview-zh.md  architecture-overview.md
tests/: check_redis_queue.py  push_data.json  push_data2.json  push_data3.json  push_feb27.json  run_hierarchy_direct.py  stress_test.py  test_hierarchy_summary.py  trigger_hierarchy.py
tests/context_processing/: test_agent_memory_processor.py  test_recall_agent.py
tests/llm/: test_llm_client.py
tests/models/: test_enums.py
tests/scheduler/: conftest.py  test_redis_scheduler.py
tests/server/: test_component_initializer.py
tests/skills/: test_validate_base_events.py
(+279 files in other folders)
