[project]
name = "MineContext"
version = "0.1.0"
description = "An open-source, proactive context-aware AI partner"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "MineContext Team" }
]
keywords = ["AI", "context", "automation", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic",
    "loguru",
    "pyyaml",
    "pandas",
    "fastapi",
    "uvicorn",
    "openai",
    "jinja2",
    "json-repair",
    "ddgs",
    "pypdf",
    "openpyxl",
    "chromadb",
    "qdrant-client",
    "mss",
    "volcengine",
    "pillow",
    "imagehash",
    "pypdfium2>=4.30.0",
    "python-docx>=1.0.0",
    "python-multipart",
    "playwright",
    "pymysql",
    "redis>=4.0.0",
    "aiohttp>=3.8.0",
    "cryptography>=46.0.3",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "asyncmy>=0.2.11",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "mypy>=1.20",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1",
    "pre-commit>=4.5",
]

[project.scripts]
opencontext = "opencontext.cli:main"

[project.urls]
Homepage = "https://github.com/volcengine/MineContext"
Repository = "https://github.com/volcengine/MineContext"
Issues = "https://github.com/volcengine/MineContext/issues"
Documentation = "https://github.com/volcengine/MineContext"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencontext"]

# Ruff - linting + formatting + import sorting
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

# mypy - type checking
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ddgs.*",
    "imagehash.*",
    "pypdfium2.*",
    "docx.*",
    "redis.*",
    "json_repair.*",
    "yaml.*",
    "asyncmy.*",
    "pandas.*",
    "crawl4ai.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: 单元测试（无外部依赖）",
    "integration: 集成测试（需要数据库/Redis）",
]
addopts = "--strict-markers"
