[project]
name = "memex"
version = "0.1.0"
description = "Personal Knowledge Assistant powered by OpenViking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openviking>=0.1.6",
    "prompt-toolkit>=3.0.52",
    "rich>=13.0.0",
    "openai>=1.0.0",
]

[tool.uv]
find-links = []

[tool.uv.sources]
openviking = { path = "../..", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["memex*"]

[project.scripts]
memex = "memex.cli:main"
